(examples) getting rid of - Integer constructor calls with primitive argument